--- a/index.html
+++ b/index.html
@@ -5,35 +5,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Barbearia do Shrek</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2?family= Roboto+Slab:wght@500 & display =swap" rel="stylesheet">
-    <!--
-    h1=titulo
-    h2=subtitulo
-    p=texto
-    a=caracteres especiais 
-     -->
+
 </head>
 
-<body background="loginsiuuu.jpg">
-    <center>
-        <h1>Barbearia do Shrek</h1>
-        <h2> Venha ficar elgante e aumentar sua autoestima com o Shrek! </h2>
-        <h2> na melhor barbearia do Brasil e do Mundo. </h2>
-        <h2> veja alguns cortes de nossos clientes </h2>
-        <img src="barba 1.jpg" alt="">
-        <img src="barba 2.jpg" alt="">
-        <img src="barba 3.jpg" alt="">
-        <img src="barba 4.jpg" alt="">
-        <img src="barba 5.jpg" alt="">
-        <h1> Veja as nossas barbearias mais proximas de vocÊ </h1>
+<body>
+    <!-- abertura -->
+
+    <div class="abertura">
+        <div class="titulo">
+            <img class="sherek" src="img/baraba do sherek.jpg" alt="">
 
 
-        <h2> Nepal </h2>
-        <p> O Nepal é um país localizado entre a india e o Tibete,
+            <div class="coluna">
+                <h1>Barbearia do Shrek</h1>
+
+                <p> Venha ficar elgante e aumentar sua autoestima com o Shrek!
+                    na melhor barbearia do Brasil e do Mundo. </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- abertura_fim -->
+
+    <div class="sobre">
+        <img class="sherek" src="img/rei sherek.jpg" alt="">
+        <div class="coluna">
+            <h1> Sobre </h1>
+            <p> a barbearia do sherek é um empreendimento de variás geraçoes de sherek na qual com o tempo se
+                espalhou por boa parte do mundo, mas graças as duas guerras mundiais hoje existem
+                apenas 5 barbearias espalhadas pelo mundo mas que apresentão otima qualidade
+                e estadia perfeitas para você
+            </p>
+        </div>
+    </div>
+
+    <div class="cabelo">
+
+        <h1>Veja alguns de Nossos Cortes </h1>
+        <div class="lista">
+            <br>
+
+            <img class="img_lista" src="img/afro_cabelo_barba.jpg" alt="">
+            <h2>-UNDERCUT AFRO + BARBA MÉDIA</h2>
+        </div>
+
+        <div class="lista">
+
+
+            <img class="img_lista" src="img/barba 1.jpg" alt="">
+            <h2>-CREW CUT + BARBA BAIXA</h2>
+        </div>
+
+        <div class="lista">
+
+
+            <img class="img_lista" src="img/barba 2.jpg" alt="">
+            <h2>-COQUE SAMURAI + BARBA CHEIA</h2>
+        </div>
+
+
+
+        <div class="lista">
+            <img class="img_lista" src="img/barba 3.jpg" alt="">
+            <h2>-QUIFF + BARBA COM BIGODE PONTUDO</h2>
+        </div>
+
+
+    </div>
+    <div class="a">
+        <a href=""> Veja mais aqui </a>
+    </div>
+    <div class="barbearias">
+        <h1> veja nossas barbearias </h1>
+
+        <h1> Nepal</h1>
+        <p>O Nepal é um país localizado entre a india e o Tibete,
             conhecido por seus templos e pelos Himalaias,
             onde fica a montanha Everest. Katmandu,
             a capital do país tem uma cidade-estado velha labiríntica
@@ -42,39 +95,33 @@
             muitos macacos, Budhanath, uma grande estupa budista.
             templo Pashupatinath com seu templo hindu e crematório e a
             cidade-estado medieval de Bhaktapur onde é localizado nossa
-            primeira barbearia fundada por sherk I em 4.d.c </p>
-        <img id='nepal' src="nepal.jpg" alt="">
-        <img id='nepal' src="the-city-of-nepal-kathmandu.jpg" alt="">
-        <img id='nepal' src="Truefitt-Hill-A-barbearia-mais-antiga-do-mundo.jpg" alt="">
+            primeira barbearia fundada por sherk I em 4.d.c</p>
+
+        <img class="img_barba" src="img/nepal.jpg" alt="">
+        <img class="img_barba" src="img/the-city-of-nepal-kathmandu.jpg" alt="">
+        <img class="img_barba" src="img/Truefitt-Hill-A-barbearia-mais-antiga-do-mundo.jpg" alt="">
+
         <h1> Coreia do norte </h1>
         <p>A Coréia do Norte é a República Popular Democrática da Coréia,
             um país no leste da Ásia, e constitui o norte da península coreana.
             Pyongyang é a capital do país e a maior cidade por sinal onde
             se localiza a segunda barbearia do sherk fundado por sherk II.</p>
+        <img class="img_barba" src="img/images.png" alt="">
+        <img class="img_barba" src="img/Coreia-do-Norte.jpg" alt="">
+        <img class="img_barba" src="img/norte.webp" alt="">
 
-
-        <img src="images.png" alt="">
-        <img src="Coreia-do-Norte.jpg" alt="">
-        <img src="norte.webp" alt="">
-        <h1> Mato Grosso do Sul</h1>
+        <h1>Mato Grosso do Sul</h1>
         <p>Mato Grosso do Sul é uma das 27 unidades federativas do Brasil.
             Localiza-se no sul da Região Centro-Oeste.
             Limita-se com cinco estados brasileiros: Mato Grosso, Goiás e Minas Gerais, São Paulo e Paraná;
             e dois países sul-americanos: Paraguai e Bolívia onde recentemente em 1743 foi fundado por sherk IV
             a terceira barbearia da familia. </p>
-        <img src="mato.png" alt="">
-        <img src="default.jpg" alt="">
-        <img src="mato barba.jpg" alt="">
-        <h1> Veja abaixo nossos principais cortes de cabelo e barba </h1>
-        <img src="corte-cabelo-estilo-jogo-barba-imagem_csp31238878.webp" alt="">
-        <img src="cortes-destaque-2.jpg" alt="">
-        <img src="lista corte.jpg" alt="">
-        <h1></h1>
-
+        <img class="img_barba" src="img/default.jpg" alt="">
+        <img class="img_barba" src="img/mato barba.jpg" alt="">
+        <img class="img_barba" src="img/mato.png" alt="">
+        <br>
         <a href="login.html">'Agende aqui a seu horario' </a>
-        <h1> </h1>
-        <img src="barba sherk.jpg" alt="">
-    </center>
+    </div>
 
 </body>
 
