--- a/index.html
+++ b/index.html
@@ -43,46 +43,44 @@
                 apenas 5 barbearias espalhadas pelo mundo mas que apresentão otima qualidade
                 e estadia perfeitas para você
             </p>
+            <br>
+            <a class="butao" href="login.html">Agende aqui a seu horario </a>
         </div>
     </div>
 
     <div class="cabelo">
 
         <h1>Veja alguns de Nossos Cortes </h1>
-        <div class="lista">
-            <br>
 
+
+        <div class="lista">
             <img class="img_lista" src="img/afro_cabelo_barba.jpg" alt="">
             <h2>-UNDERCUT AFRO + BARBA MÉDIA</h2>
+
         </div>
-
+<br>
         <div class="lista">
-
-
             <img class="img_lista" src="img/barba 1.jpg" alt="">
             <h2>-CREW CUT + BARBA BAIXA</h2>
         </div>
-
+<br>
         <div class="lista">
-
-
-            <img class="img_lista" src="img/barba 2.jpg" alt="">
+            <img id="samurai" src="img/barba 2.jpg" alt="">
             <h2>-COQUE SAMURAI + BARBA CHEIA</h2>
         </div>
-
-
-
+        <br>
         <div class="lista">
             <img class="img_lista" src="img/barba 3.jpg" alt="">
             <h2>-QUIFF + BARBA COM BIGODE PONTUDO</h2>
         </div>
+<br>
+
 
 
     </div>
-    <div class="a">
-        <a href=""> Veja mais aqui </a>
-    </div>
+
     <div class="barbearias">
+        <a href="" class="veja"> Veja mais aqui </a>
         <h1> veja nossas barbearias </h1>
 
         <h1> Nepal</h1>
@@ -120,7 +118,9 @@
         <img class="img_barba" src="img/mato barba.jpg" alt="">
         <img class="img_barba" src="img/mato.png" alt="">
         <br>
-        <a href="login.html">'Agende aqui a seu horario' </a>
+        <br>
+        <a class="butao" href="login.html">Agende aqui a seu horario </a>
+
     </div>
 
 </body>
